--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Octo Fiesta - Begin Your Journey</title>
-    <link rel="stylesheet" href="style.css">
-    </head>
+    <link rel="stylesheet" href="startup.css"> </head>
 <body>
     <div id="game-container">
         <div id="background-elements">
@@ -28,6 +27,5 @@
             <div class="version-info">2.0.8</div> </div>
     </div>
 
-    <script src="script.js"></script>
-</body>
+    <script src="startup.js"></script> </body>
 </html>
