--- a/index.html
+++ b/index.html
@@ -4,13 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Octo Fiesta - Begin Your Journey</title>
-    <link rel="stylesheet" href="startup.css"> </head>
+    <link rel="stylesheet" href="startup.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Audiowide&display=swap" rel="stylesheet">
+
+</head>
 <body>
     <div id="game-container">
         <div id="background-elements">
             <div class="background-stars"></div>
             <div class="background-structure"></div>
-            <div class="background-skull-glow"></div> </div>
+            <div class="background-skull-glow"></div>
+        </div>
 
         <div id="foreground-silhouette">
             <img src="assets/hero_silhouette.png" alt="Hero Silhouette" class="player-silhouette">
@@ -24,8 +31,10 @@
                 <a href="#" id="options" class="menu-item">OPTIONS</a>
                 <p class="press-start-message">PRESS ANY KEY TO START</p>
             </div>
-            <div class="version-info">2.0.8</div> </div>
+            <div class="version-info">2.0.8</div>
+        </div>
     </div>
 
-    <script src="startup.js"></script> </body>
+    <script src="startup.js"></script>
+</body>
 </html>
