--- a/index.html
+++ b/index.html
@@ -34,7 +34,11 @@
             <div class="version-info">2.0.8</div>
         </div>
     </div>
-
+<style>
+body {
+  background-image: url('octoLoad.png');
+}
+</style>
     <script src="startup.js"></script>
 </body>
 </html>
