--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
         <div id="main-menu-screen" class="screen">
             <div class="menu-image-container">
-                <img src="octoLoad.png" alt="Octo Fiesta Menu Octopus" class="menu-octopus-img">
+                <img src="4K octoload.png" alt="Octo Fiesta Menu Octopus" class="menu-octopus-img">
             </div>
             <div class="main-menu-buttons">
                 <a href="#" id="continueGame" class="menu-item">CONTINUE</a>
